--- a/css/main-page.css
+++ b/css/main-page.css
@@ -164,6 +164,7 @@ body {
   text-align: center;
   border-radius: 5px;
   transition: background-color 0.3s;
+  cursor: pointer;
 }
 
 .launchpad-item:hover {
@@ -510,10 +511,11 @@ body {
   background-color: #f5f5f7;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
-  width: 90%;
+  width: 100%;
   max-width: 1000px;
-  height: 85%;
-  max-height: 700px;
+  margin-bottom: 60px;
+  height: 75vh;
+  max-height: 520px;
   overflow: hidden;
   z-index: 100;
   animation: fadeIn 0.3s;
@@ -535,6 +537,9 @@ body {
 
 .search-container {
   margin-bottom: 20px;
+  max-width: 700px; /* Add this line to limit the width */
+  margin-left: 5px; /* Center the search box */
+  margin-right: auto;
 }
 
 .gallery-search {
